--- a/gb/21/5/29/n12984672.md
+++ b/gb/21/5/29/n12984672.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/upjkzu3674/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/upjkzu3674/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upjkzu3674/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upjkzu3674/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upjkzu3674/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】大陆居民消费 为何全球垫底？</h2>
-
+<a href="https://duxu97yt14q37.cloudfront.net/R0qtYwwba"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年05月29日讯】这些年，网上最火的“平”一直是习近平，不过最近有另外两个“平”抢了风头，一个就是刚刚去世的袁隆平，再一个就是现在网上热炒的“躺平”。尤其是这个“躺平”，更是让中共着急上火，因为，自从习近平提出要内循环之后，中共经济就要靠<ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E5%86%85%E9%9C%80.md#1">内需</a>来拉动了，现在韭菜们要“躺平”，这镰刀也就不好割了，那这经济还怎么拉动呢？</p>
-<p>何况，就算没有这个“躺平”运动，中共也已经很着急地高喊要扩大消费了，原因自然是因为消费低迷。今年是中共“十四五”的开局之年，在去年底的时候，中共就已经把扩大<ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E5%86%85%E9%9C%80.md#1">内需</a>列为今年的重要任务之一，还提出要“有序取消一些行政性限制消费购买的规定”，并且要“合理增加公共消费”，可见这消费疲弱的问题已经是火烧眉毛了。</p>
+	<p>【大纪元2021年05月29日讯】这些年，网上最火的“平”一直是习近平，不过最近有另外两个“平”抢了风头，一个就是刚刚去世的袁隆平，再一个就是现在网上热炒的“躺平”。尤其是这个“躺平”，更是让中共着急上火，因为，自从习近平提出要内循环之后，中共经济就要靠<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%86%85%E9%9C%80.md#1">内需</a>来拉动了，现在韭菜们要“躺平”，这镰刀也就不好割了，那这经济还怎么拉动呢？</p>
+<p>何况，就算没有这个“躺平”运动，中共也已经很着急地高喊要扩大消费了，原因自然是因为消费低迷。今年是中共“十四五”的开局之年，在去年底的时候，中共就已经把扩大<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%86%85%E9%9C%80.md#1">内需</a>列为今年的重要任务之一，还提出要“有序取消一些行政性限制消费购买的规定”，并且要“合理增加公共消费”，可见这消费疲弱的问题已经是火烧眉毛了。</p>
 <p>而且，去年，中国的最终消费对经济增长的贡献率是-22%，这是1978年中国改革开放以来第一次出现的负增长。更严重的是，专家们认为，去年的消费疲弱，并不是疫情冲击下的意外下滑，而是原有趋势在外部冲击下的加速下滑，也就是说，消费疲弱不仅之前就存在，还可能要长期面对。</p>
 <p>那我们今天就来重点谈谈，中国的消费到底出了什么问题？</p>
-<p><a src="https://www.youmaker.com/embed/90dc81a7-ebe5-46d6-9909-e69b67aa0a9b?r=16x9&amp;d=717" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<h2><ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E5%B1%85%E6%B0%91%E6%B6%88%E8%B4%B9.md#1">居民消费</a>倾向下降 <ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E5%82%A8%E8%93%84.md#1">储蓄</a>倾向提高</h2>
+<p><a src=""></a><a href="https://duxu97yt14q37.cloudfront.net/R0qtYwwba"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/90dc81a7-ebe5-46d6-9909-e69b67aa0a9b?r=16x9&amp;d=717" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B1%85%E6%B0%91%E6%B6%88%E8%B4%B9.md#1">居民消费</a>倾向下降 <ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%82%A8%E8%93%84.md#1">储蓄</a>倾向提高</h2>
 <p>首先，决定消费的最重要因素是居民可支配收入的增长。但是，中国居民可支配收入的增长速度，多年来都持续呈现下滑状态，2012年是10.6%，而到了2019年，已经下降到了5.8%，2020年更放缓到2.1%。从绝对数值上看，2020年人均可支配收入是32,189元，如果用前两年的名义增速的平均值来估算，去年整体居民收入少增加大约1.7万亿元。</p>
-<p>而在收入增速严重放缓的同时，居民的消费倾向下降，<ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E5%82%A8%E8%93%84.md#1">储蓄</a>倾向则在提高。</p>
+<p>而在收入增速严重放缓的同时，居民的消费倾向下降，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%82%A8%E8%93%84.md#1">储蓄</a>倾向则在提高。</p>
 <p>相关的数据表明，中国城镇居民的平均消费倾向（人均消费支出/可支配收入）已经从1990年的0.85以上，下降到疫情爆发前的0.7左右，而到了2020年疫情期间，居民平均消费倾向已经下滑到不足0.62，再创历史低点。</p>
 <p>而经济学家钟正生的研究显示，2020年城镇储户储蓄倾向在急速攀升，2019年年底时是45.7%，到了2020年第四季度就上升到了51.4%。央行公布的人民币存款数据也显示，2020年住户存款新增了11.3万亿元，比2019年多增加了1.6万亿元。</p>
 <p>我们看到，一方面，居民收入少增加1.7万亿元，而另一方面，住户储蓄多增加了1.6万亿元，这对2020年的消费构成了双重打击。</p>
 <p>那么，中国的消费疲弱，只是受到疫情冲击的短期现象吗？恐怕不是。《第一财经》今年刊发的一篇文章，就透露了一个真相：中国的消费水平，在世界范围内处在一个非常低的水平。我们来看看它是怎么说的。</p>
 <h2>中国的消费处于什么水平？</h2>
-<p>这篇文章的题目就叫做“中国的<ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E5%B1%85%E6%B0%91%E6%B6%88%E8%B4%B9.md#1">居民消费</a>在全世界处于什么水平”，是苏宁研究院的研究成果。他们发现，2020年中国最终消费率（最终消费占GDP比重）接近55%，但是一般发达国家的最终消费率是80%左右。</p>
+<p>这篇文章的题目就叫做“中国的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B1%85%E6%B0%91%E6%B6%88%E8%B4%B9.md#1">居民消费</a>在全世界处于什么水平”，是苏宁研究院的研究成果。他们发现，2020年中国最终消费率（最终消费占GDP比重）接近55%，但是一般发达国家的最终消费率是80%左右。</p>
 <p>即使是跟同等人均GDP水平的国家相比，比如俄罗斯、巴西、波兰这些国家，中国的最终消费率也要低25个百分点左右；甚至和印度、泰国、越南这些新兴市场国家相比，也要低10个百分点以上。</p>
 <p>如果把最终消费中的政府消费部分扣除，只是计算居民消费率（居民消费占GDP比重），中国和其它国家相比，也要低20个百分点左右，在刚才提到的这些国家中仍然是最低的。</p>
 <p>也就是说，无论怎么比较，中国的居民消费率都很低。</p>
@@ -53,48 +53,48 @@
 撰文：李松筠、财商经济研究所<br />
 剪辑：曲歌<br />
 监制：文静<br />
-<ahref="https://github.com/upjkzu3674/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/21/5/25/n12975557.md#1">【财商天下】比特币兴风作浪 谁是大玩家？</a></li>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/21/5/27/n12980022.md#1">【财商天下】杂交水稻之父 袁隆平的大实话</a></li>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/21/5/28/n12982925.md#1">【财商天下】“躺平族”挑战“赵家人”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/25/n12975557.md#1">【财商天下】比特币兴风作浪 谁是大玩家？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/27/n12980022.md#1">【财商天下】杂交水稻之父 袁隆平的大实话</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/28/n12982925.md#1">【财商天下】“躺平族”挑战“赵家人”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10311201.md#1" target="_blank">心升：以史为镜看毛邪（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045340.md#1" target="_blank">《苦菜花》人物原型的真实人生（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/20/n12963544.md#1">血月是什么征兆 圣经预言怎么说？</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/22/n12967538.md#1">中华文化有“血月”之说吗  有教人避难之法吗？</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/22/n12968274.md#1">金簪满头 端艳无双——大明贵妇必备的头面</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/29/n12984559.md#1">【珍言真语】Uncle Leo：守良心留港摆街站</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/29/n12983914.md#1">【拍案惊奇】美疫苗飞台突改航线 中共媒体对轰</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12983421.md#1">车评：小升级！小车也有四轮碟刹  2021 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12980260.md#1">民企变国企 大陆女富豪300亿身家恐被清零</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12978414.md#1">38岁胡歌近照曝光 消瘦老态惊呆网友</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12978414.md#1">38岁胡歌近照曝光 消瘦老态惊呆网友</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12982190.md#1">所愿公开GFRIEND群组对话 成员温馨诉爱意</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12983483.md#1">周星驰30年前拍片总打哈欠 背后原因曝光</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12977852.md#1">在台创立个人品牌 杜汶泽：台湾出品就是良品</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12980898.md#1">赵又廷带岳父母探班 高圆圆私下状态超好</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12980666.md#1">美国终于不用戴口罩了？2类人不能摘口罩</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12983421.md#1">车评：小升级！小车也有四轮碟刹  2021 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12981518.md#1">眼见为凭！ 巴西两只蜜蜂合力打开汽水瓶盖</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12979302.md#1">为什么有些人无法忍受别人的咀嚼声？</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/28/n12982507.md#1">声色场所成防疫大漏洞？隐秘传播4因素</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/upjkzu3674/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/upjkzu3674/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/29/n12984672.htm">【财商天下】大陆居民消费 为何全球垫底？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/29/n12984672.htm">【财商天下】大陆居民消费 为何全球垫底？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/upjkzu3674/djy/blob/master/gb/21/5/29/n12984672.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upjkzu3674/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/5/29/n12984672.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
